added u.s. zip code text bar

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <h1 class="display-4">My Site</h1>
   <p class="lead">This is a simple Jumbotron component from Bootstrap 4.</p>
   <hr class="my-4">
@@ -13,9 +13,19 @@
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Learn more</a>
   </p>
-</div>
+</div> -->
 
+
+<p>Get an alert 30 minutes prior to the sunrise/sunset near you</p>
+
+<form>
+  <input type="text" name="U.S._Zip_Code" placeholder="Add U.S. Zip Code Here">
+</form>
+
+
+<!-- <p>More stuff. {{ example_context_variable }}.</p> -->
 
 {% endblock content %}
+
 
 
