--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -13,3 +13,23 @@
     margin-top: -10px;
     margin-bottom: -10px;
 }
+
+/* U.S. Navigation Bar */
+input[type=text] {
+  width: 250px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-image: url('/static/images/sun.jpg');
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+  width: 100%;
+}
