--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -22,14 +22,21 @@ input[type=text] {
   border-radius: 4px;
   font-size: 16px;
   background-color: white;
-  background-image: url('/static/images/sun.jpg');
+  background-image: url('');
   background-position: 10px 10px; 
   background-repeat: no-repeat;
   padding: 12px 20px 12px 40px;
   -webkit-transition: width 0.4s ease-in-out;
   transition: width 0.4s ease-in-out;
+  margin: auto;
 }
 
 input[type=text]:focus {
   width: 100%;
 }
+
+/* Form */
+form { display: flex;
+       justify-content: center;
+}
+
