--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -16,10 +16,12 @@
 </div> -->
 
 
-<p>Get an alert 30 minutes prior to the sunrise/sunset near you</p>
+<!-- <p>Get an alert 30 minutes prior to the sunrise/sunset near you</p> -->
 
 <form>
-  <input type="text" name="U.S._Zip_Code" placeholder="Add U.S. Zip Code Here">
+  <div class="input-position-adjust">
+    <input type="text" name="U.S._Zip_Code" placeholder="Add U.S. Zip Code Here">
+  </div>
 </form>
 
 
