--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -26,6 +26,8 @@
     <!-- Add your custom CSS to this file -->
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Solway&display=swap" rel="stylesheet">
+
   </head>
 
 <body>
@@ -34,7 +36,7 @@
     <div class="container">
         <a class="navbar-brand" href="/">
             <!-- Add your logo here!  <img src="" /> -->
-            My Site
+            Welcome to Phosphorus
         </a>
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}">Start</a>
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">About</a>
