added images to about page

--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -7,7 +7,39 @@
 
 {% block content %}
 
-<p>Learn more about my site...</p>
+<div class="wrapper">
+
+        <div class="item">
+          <div class="polaroid"><img src="/static/images/dawn.jpg">
+            <div class="caption">sun</div>
+          </div>
+        </div>
+      
+        <div class="item">
+          <div class="polaroid"><img src="/static/images/desert.jpg">
+            <div class="caption">mặt trời</div>
+          </div>
+        </div>
+      
+        <div class="item">
+          <div class="polaroid"><img src="/static/images/nature.jpg">
+            <div class="caption">dom</div>
+          </div>
+        </div>
+      
+        <div class="item">
+          <div class="polaroid"><img src="/static/images/sky.jpg">
+            <div class="caption">ilanga</div>
+          </div>
+        </div>
+        
+        <div class="item">
+          <div class="polaroid"><img src="/static/images/sunset.jpg">
+            <div class="caption">tàiyáng</div>
+          </div>
+        </div>
+      
+      </div>
 
 {% endblock content %}
 
