--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -4,7 +4,7 @@
     My Site - Home
 {% endblock title %}
 
-
+{% sun_time %}   <!-- THIS IS FOR DISPLAYING THE SUN UP/DOWN TIME -->
 {% block content %}
 <div class="jumbotron">
   <h1 class="display-4">My Site</h1>
