--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}
-    My Site - Home
+    Phosphorus
 {% endblock title %}
 
 {% block content %}
-
 
 <header>
     <div class="overlay"></div>
@@ -25,6 +24,3 @@
 
 
 {% endblock content %}
-
-
-
