setup a new PostCity form in views and tried using it in home.html; POST success and form appears, but response does not for some reason; will revert home back to cindys version to avoid conflicts

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -20,10 +20,11 @@
                 {{ form.as_p }}
                 <button type="submit">Submit</button>
               </form>
+          </div>
+          <div>
               {% if request.method == POST %}
-            <!-- The current time is: {{ forecast.astronomy.astronomy.0.utcTime }} -->
-                Today's sunrise: {{ forecast.astronomy.astronomy.0.sunrise }}
-                Today's sunset: {{ forecast.astronomy.astronomy.0.sunset }}
+                <p>Today's sunrise: {{ forecast.astronomy.astronomy.0.sunrise }}</p>
+                <p>Today's sunset: {{ forecast.astronomy.astronomy.0.sunset }}</p>
               {% endif %}
           </div>
         </div>
