--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -16,16 +16,7 @@
       <div class="d-flex h-100 text-center align-items-center">
         <div class="w-100 text-white">
           <div class="input-position-adjust">
-              <form method="POST" action="/">{% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Submit</button>
-              </form>
-          </div>
-          <div>
-              {% if request.method == POST %}
-                <p>Today's sunrise: {{ forecast.astronomy.astronomy.0.sunrise }}</p>
-                <p>Today's sunset: {{ forecast.astronomy.astronomy.0.sunset }}</p>
-              {% endif %}
+              <input type="text" name="city" placeholder="Add U.S. City Here">
           </div>
         </div>
       </div>
@@ -34,6 +25,17 @@
 
 
 {% endblock content %}
+
+
+
+
+<!-- 
+django form response, doesn't quite work ({form.as_p} csrf_token were removed for now)
+{% if request.method == POST %}
+  <p>Today's sunrise: {{ forecast.astronomy.astronomy.0.sunrise }}</p>
+  <p>Today's sunset: {{ forecast.astronomy.astronomy.0.sunset }}</p>
+{% endif %} 
+-->
 
 
 
