reorganize views.py

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -11,29 +11,34 @@
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
       <source src="/static/videos/landscape.mp4" type="video/mp4">
     </video>
-    <div class="container h-100">
+    <!-- <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
         <div class="w-100 text-white">
           <div class="input-position-adjust">
-              <input type="text" name="city" placeholder="Add U.S. City Here">
+              <input type="text" name="city" placeholder="Enter U.S. City">
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+
   </header>
 
+  <div class="row">
+    <div class="col">
+        <form action="/" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button>Submit</button>
+        </form>
+    </div>
+
+<!-- Below django still does not work to display data -->
+
+    {% if request.method == POST %}
+
+      <p>Today's sunrise: {{ local_sunset }}</p>
+      <p>Today's sunset: {{ local_sunrise }}</p>
+
+    {% endif %}
 
 {% endblock content %}
-
-
-
-
-<!-- 
-django form response, doesn't quite work ({form.as_p} csrf_token were removed for now)
-{% if request.method == POST %}
-  <p>Today's sunrise: {{ forecast.astronomy.astronomy.0.sunrise }}</p>
-  <p>Today's sunset: {{ forecast.astronomy.astronomy.0.sunset }}</p>
-{% endif %} 
--->
-
-
