--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -25,7 +25,7 @@
 
   <div class="row">
     <div class="col">
-        <form action="/" method="POST">
+        <form action="." method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <button>Submit</button>
