changed all POSTs to GETs; now getting error: "tuple" object has no attribute "get"

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -25,7 +25,7 @@
 
   <div class="row">
     <div class="col">
-        <form action="." method="POST">
+        <form action="." method="GET">
             {% csrf_token %}
             {{ form.as_p }}
             <button>Submit</button>
@@ -34,7 +34,7 @@
 
 <!-- Below django still does not work to display data -->
 
-    {% if request.method == POST %}
+    {% if request.method == GET %}
 
       <p>Today's sunrise: {{ local_sunset }}</p>
       <p>Today's sunset: {{ local_sunrise }}</p>
