--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -2,6 +2,12 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+<video autoplay muted loop id="myVideo">
+  <source src="/static/videos/landscape.mp4" type="video/mp4">
+</video>
+
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -26,7 +32,6 @@
     <!-- Add your custom CSS to this file -->
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Solway&display=swap" rel="stylesheet">
 
   </head>
 
@@ -34,7 +39,7 @@
 
 <nav class="navbar navbar-expand-md">
     <div class="container">
-        <a class="navbar-brand" href="/">
+        <!-- <a class="navbar-brand" href="/">
             <!-- Add your logo here!  <img src="" /> -->
             Welcome to Phosphorus
         </a>
@@ -53,7 +58,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'view_all_users' %}">Users</a>
                 </li>
             </ul>
@@ -76,7 +81,7 @@
                         <a id="log-in-link" class="nav-link" href="{% url 'signup' %}">Sign up</a>
                     </li>
                 {% endif %}
-            </ul>
+            </ul> -->
 
         </div>
     </nav>
