--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -6,11 +6,11 @@
 
 {% block content %}
 
-<header>
-    <div class="overlay"></div>
+<header> WHERE ARE YOU? </header>
+    <!-- <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
       <source src="/static/videos/landscape.mp4" type="video/mp4">
-    </video>
+    </video> -->
     <!-- <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
         <div class="w-100 text-white">
@@ -21,15 +21,22 @@
       </div>
     </div> -->
 
-  </header>
+
 
   <div class="row">
     <div class="col">
-        <form action="/" method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button>Submit</button>
-        </form>
+
+
+<form id="form" class="topBefore" method="POST">
+<!-- <input id="name" type="text" placeholder="NAME OF CITY"> -->
+{% csrf_token %}
+{{ form.as_p }}
+<p>
+<input id="submit" type="submit" value="LET'S GO">
+
+</form>
+
+
     </div>
 
 <!-- Below django still does not work to display data -->
