--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -15,13 +15,14 @@
       <div class="d-flex h-100 text-center align-items-center">
         <div class="w-100 text-white">
           <div class="input-position-adjust">
+            <form action=".">
               <input type="text" name="city" placeholder="Add U.S. City Here">
+            </form>
           </div>
         </div>
       </div>
     </div>
   </header>
-
 
 {% endblock content %}
 
