--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -7,19 +7,6 @@
 {% block content %}
 
 <header> WHERE ARE YOU? </header>
-    <!-- <div class="overlay"></div>
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="/static/videos/landscape.mp4" type="video/mp4">
-    </video> -->
-    <!-- <div class="container h-100">
-      <div class="d-flex h-100 text-center align-items-center">
-        <div class="w-100 text-white">
-          <div class="input-position-adjust">
-              <input type="text" name="city" placeholder="Enter U.S. City">
-          </div>
-        </div>
-      </div>
-    </div> -->
 
 
 
@@ -35,17 +22,22 @@
 <input id="submit" type="submit" value="LET'S GO">
 
 </form>
-
-
+  </div>
     </div>
 
 <!-- Below django still does not work to display data -->
 
-    {% if request.method == POST %}
+<!--
+{% if request.method == POST %} -->
 
-      <p>Today's sunrise: {{ local_sunset }}</p>
-      <p>Today's sunset: {{ local_sunrise }}</p>
 
-    {% endif %}
+<!-- {% endif %} -->
+
+<div class="row">
+  <div class="col">
+<p>Today's sunrise: {{ local_sunset }}</p>
+
+<p>Today's sunset: {{ local_sunrise }}</p>
+
 
 {% endblock content %}
