got about page working but needs css

--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -38,7 +38,7 @@
             <div class="caption">tàiyáng</div>
           </div>
         </div>
-      
+        <p> {{ text }} </p>
       </div>
 
 {% endblock content %}
