added env file and airvisual api

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -37,8 +37,8 @@
   <div class="col">
     {% if local_sunset %}
     <p>Today's sunset: {{ local_sunset }}</p>
-
     <p>Today's sunrise: {{ local_sunrise }}</p>
+    <p> {{ aqi }} </p> 
   {% endif %}
 
 {% endblock content %}
