added error_message to context, in process of adding it to home.html

--- a/apps/core/templates/500.html
+++ b/apps/core/templates/500.html
@@ -7,6 +7,8 @@
 
 <h3>Looks like something went wrong!</h3>
 
+<h4>Did you enter a real city?</h4>
+
 <p>We track these errors automatically, but if the problem persists feel free
 to contact us. In the meantime, try refreshing.</p>
 
