returning AQI number

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -18,6 +18,7 @@
 
     <p>Today's sunset: {{ local_sunset }}</p>
     <p>Today's sunrise: {{ local_sunrise }}</p>
+    <p>Local AQI: {{ local_ip_aqi }} </p>
 
   {% else %}
 
