moved verbage to top of about page

--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -5,7 +5,9 @@
 {% endblock title %}
 
 {% block content %}
-<header>BENEFITS OF THE SUN</header>
+<header>PHOSPHORUS</header>
+
+<p>Phosphorus is an app for sun-based mindfulness. Get a reminder 30 minutes before sunrise and sunset to have a chance to get outside and enjoy the sun. Watching a sunrise/sunset has noted mental benefits, and is a great way to start or end your day. The app combines sun-mindfulness with positive affirmations for meditation and stress-relief.</p>
 
 <div class="wrapper">
 
@@ -27,7 +29,7 @@
           </div>
         </div>
       
-<p>Phosphorus is an app for sun-based mindfulness. Get a reminder 30 minutes before sunrise and sunset to have a chance to get outside and enjoy the sun. Watching a sunrise/sunset has noted mental benefits, and is a great way to start or end your day. The app combines sun-mindfulness with positive affirmations for meditation and stress-relief.</p>
+
 
 {% endblock content %}
 
