--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -55,6 +55,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'view_all_users' %}">Users</a>
                 </li>
