add AQI if statement and about P

--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -7,7 +7,16 @@
 {% block content %}
 <header>PHOSPHORUS</header>
 
-<p>Phosphorus is an app for sun-based mindfulness. Get a reminder 30 minutes before sunrise and sunset to have a chance to get outside and enjoy the sun. Watching a sunrise/sunset has noted mental benefits, and is a great way to start or end your day. The app combines sun-mindfulness with positive affirmations for meditation and stress-relief.</p>
+<p><em>Phosphorus</em> is an app for sun-based mindfulness. A Kickstart Coding Back-end Project.
+
+<p>
+Get a reminder 30 minutes before sunrise or sunset to have a chance to get outside and enjoy the sun.
+Watching a sunrise/sunset has noted mental benefits, and is a great way to start or end your day.
+
+<p>
+<em> Phosphorus</em> utilizes HereMaps and AirVisual APIs to calculate geo-specific data based on user input and IP address.
+
+</p>
 
 <div class="wrapper">
 
@@ -16,21 +25,19 @@
             <div class="caption">Serotonin</div>
           </div>
         </div>
-      
+
         <div class="item">
           <div class="polaroid"><img src="/static/images/desert.jpg">
             <div class="caption">Vitamin D</div>
           </div>
         </div>
-      
+
         <div class="item">
           <div class="polaroid"><img src="/static/images/nature.jpg">
             <div class="caption">Skin Disorder Remedy</div>
           </div>
         </div>
-      
+
 
 
 {% endblock content %}
-
-
