adding about explaination to home

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -54,6 +54,8 @@
 
   <header> WHERE ARE YOU? </header>
 
+  <p> We'll let you know when the sun is going down. </p> 
+
   <div class="row">
     <div class="col">
 
