--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -19,6 +19,19 @@
   opacity: 0.35;
 }
 
+#myVideo2 {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  top: 20;
+  min-width: 100%;
+  min-height: 100%;
+  opacity: 0.6;
+}
+
+
+}
+
 /* CSS FOR SUBMISSION FORM */
 
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
