--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -13,19 +13,22 @@
 
         <div class="item">
           <div class="polaroid"><img src="/static/images/dawn.jpg">
-            <div class="caption">Serotonin</div>
+            <div class="caption"><a href="https://www.healthline.com/health/depression/benefits-sunlight">Serotonin</a>
+              </div>
           </div>
         </div>
       
         <div class="item">
           <div class="polaroid"><img src="/static/images/desert.jpg">
-            <div class="caption">Vitamin D</div>
+            <div class="caption"><a href="https://www.health.harvard.edu/staying-healthy/vitamin-d-and-your-health-breaking-old-rules-raising-new-hopes">Vitamin D</a>
+            </div>
           </div>
         </div>
       
         <div class="item">
           <div class="polaroid"><img src="/static/images/nature.jpg">
-            <div class="caption">Skin Disorder Remedy</div>
+            <div class="caption"><a href="https://mrc.ukri.org/news/browse/scientists-uncover-how-sunlight-on-skin-reduces-eczema-inflammation/">Alleviates Skin Disorder</a>
+            </div>
           </div>
         </div>
       
