got Location form and model working, need to add to html context

--- a/apps/accounts/templates/accounts/profile_page.html
+++ b/apps/accounts/templates/accounts/profile_page.html
@@ -15,6 +15,7 @@
 
         {% if is_viewing_self %}
             <a href="{% url "edit_profile" %}">Edit</a>
+            <a href="{% url "add_location" %}">Add Location</a>
         {% endif %}
     </div>
 
