successfully got added locations to show up on user page

--- a/apps/accounts/templates/accounts/profile_page.html
+++ b/apps/accounts/templates/accounts/profile_page.html
@@ -20,7 +20,12 @@
     </div>
 
     <div class="col-md-9">
-        stuff could go here...
+        <h4>Locations</h4>
+        <ul>
+            {% for location in locations %}
+            <li>{{ location }}</li>
+            {% endfor %}
+        </ul>
     </div>
 </div>
 {% endblock %}
