--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -18,7 +18,7 @@
           <!-- listing output infor from form results -->
 
           <div class="row">
-            <div class="col" id="form" align="center">
+            <div class="col" id="form2" align="center">
 
             <p>Today's sunset: {{ local_sunset }}</p>
             <p>Today's sunrise: {{ local_sunrise }}</p>
@@ -27,9 +27,8 @@
             <p>Local AQI: {{ local_ip_aqi }} </p>
 
 
-
-
   {% else %}
+
 
   <video autoplay muted loop id="myVideo">
     <source src="/static/videos/landscape.mp4" type="video/mp4">
@@ -44,7 +43,7 @@
 
 
     <form id="form" class="topBefore" method="POST">
-      <p align="center"> We'll let you know when the sun is going down. </p>
+      <p align="center"> We'll let you know when the sun goes down. </p>
 
       {% csrf_token %}
       {{ form.as_p }}
