add landscape to account htmls

--- a/apps/accounts/templates/accounts/signup.html
+++ b/apps/accounts/templates/accounts/signup.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% include "accounts/landscape_snippet.html" %}
+
 {% include "accounts/form_snippet.html" with form_title="Sign Up" %}
 
 {% endblock %}
