--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -1,10 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-
-
 <html lang="en">
-
 
 
   <head>
@@ -38,15 +35,13 @@
 
 <nav class="navbar navbar-expand-md">
     <div class="container">
-<!-- do we even need this title with the title templating above -->
-            Phosphorus
+
+            Welcome to Phosphorus
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
         </button>
-
-{% if local_sunrise and local_sunset %}
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -56,22 +51,20 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
-                
-{% endif %}
 
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'view_all_users' %}">Users</a>
-                </li>
+                </li> -->
             </ul>
             <ul class="navbar-nav ml-auto">
-                {% if request.user.is_authenticated %}
+                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}" >Sign Out</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'view_profile' request.user %}" >
                             {{ request.user }}
-                            <img src="{{ user.gravatar }}" class="navbar-avatar" />
+                            <!-- <img src="{{ user.gravatar }}" class="navbar-avatar" /> -->
                         </a>
                     </li>
                 {% else %}
@@ -82,7 +75,7 @@
                         <a id="log-in-link" class="nav-link" href="{% url 'signup' %}">Sign up</a>
                     </li>
                 {% endif %}
-            </ul> -->
+            </ul>
 
         </div>
     </nav>
