--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -20,11 +20,11 @@
           <div class="row">
             <div class="col" id="form2" align="center">
 
-            <p>Today's sunset: {{ local_sunset }}</p>
-            <p>Today's sunrise: {{ local_sunrise }}</p>
+            <p>Your next sunset: {{ local_sunset }}</p>
+            <p>Your next sunrise: {{ local_sunrise }}</p>
 
 
-            <p>Local AQI: {{ local_ip_aqi }} </p>
+            <p>Local Air Quality Index: {{ local_ip_aqi }} </p>
 
 
   {% else %}
