--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -133,8 +133,7 @@ header {
   position: relative;
   width: 300px;
   margin: 50px auto 100px auto;
-  font-weight: bold;
-  color: black; 
+  color: black;
 
 }
 
@@ -160,7 +159,7 @@ input {
 }
 
 input:hover {
-  background: #b3c4d6;
+  background: #6b7682;
   color: #e2dedb;
 }
 
@@ -205,7 +204,7 @@ textarea:hover {
   cursor: pointer;
 
   border: none;
-  /* border: solid 1px #b3c4d6;
+  /* border: solid 1px #6b7682;
   border-top: none; */
 }
 
