--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -20,8 +20,8 @@
           <div class="row">
             <div class="col" id="form2" align="center">
 
-            <p>Your next sunset: {{ local_sunset }}</p>
-            <p>Your next sunrise: {{ local_sunrise }}</p>
+            <p>Today's sunset: <br>{{ local_sunset }}</p>
+            <p>Today's next sunrise: <br>{{ local_sunrise }}</p>
 
 
             <p>Local Air Quality Index: {{ local_ip_aqi }} </p>
