--- a/apps/core/static/css/BADCSS.css
+++ b/apps/core/static/css/BADCSS.css
@@ -1,5 +1,16 @@
 /* Custom CSS goes here */
 
+.nav-link {
+
+  font-family: 'Lato', sans-serif;
+  background: #e2dedb;
+  color: #474442;
+
+}
+
+#output {
+  opacity: 0.5;
+}
 
 #myVideo {
   position: fixed;
@@ -8,6 +19,19 @@
   min-width: 100%;
   min-height: 100%;
   opacity: 0.35;
+}
+
+#myVideo2 {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  top: 20;
+  min-width: 100%;
+  min-height: 100%;
+  opacity: 0.6;
+}
+
+
 }
 
 /* CSS FOR SUBMISSION FORM */
@@ -108,6 +132,14 @@ header {
   margin: 50px auto 100px auto;
 }
 
+#form2 {
+  position: relative;
+  width: 300px;
+  margin: 50px auto 100px auto;
+  color: black;
+
+}
+
 input {
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
@@ -130,7 +162,7 @@ input {
 }
 
 input:hover {
-  background: #b3c4d6;
+  background: #6b7682;
   color: #e2dedb;
 }
 
@@ -175,7 +207,7 @@ textarea:hover {
   cursor: pointer;
 
   border: none;
-  /* border: solid 1px #b3c4d6;
+  /* border: solid 1px #6b7682;
   border-top: none; */
 }
 
@@ -183,4 +215,104 @@ textarea:hover {
   color: #d4e1ef;
 }
 
-/* About Page */
+
+
+/* gallery effects on about page thumbnail pics */
+
+.wrapper {
+  width: 100%;
+  padding: 0 2rem;
+  text-align: center;
+}
+.polaroid {
+  background: #fff;
+  padding: 1rem;
+  box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,0.2);
+
+}
+.polaroid > img{
+  max-width: 100%;
+  height: auto;
+}
+.caption {
+  font-size: 1.8rem;
+  text-align: center;
+  line-height: 2em;
+}
+.item {
+  width: 30%;
+  display: inline-block;
+  margin-top: 2rem;
+  filter: grayscale(100%);
+}
+.item .polaroid:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  transition: all 0.35s;
+}
+.item:nth-of-type(4n+1) {
+  transform: scale(0.8, 0.8) rotate(5deg);
+  transition: all 0.35s;
+}
+.item:nth-of-type(4n+1) .polaroid:before {
+  transform: rotate(6deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  right: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.4);
+}
+.item:nth-of-type(4n+2) {
+  transform: scale(0.8, 0.8) rotate(-5deg);
+  transition: all 0.35s;
+}
+.item:nth-of-type(4n+2) .polaroid:before {
+  transform: rotate(-6deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  left: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.4);
+}
+.item:nth-of-type(4n+4) {
+  transform: scale(0.8, 0.8) rotate(3deg);
+  transition: all 0.35s;
+}
+.item:nth-of-type(4n+4) .polaroid:before {
+  transform: rotate(4deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  right: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.3);
+}
+.item:nth-of-type(4n+3) {
+  transform: scale(0.8, 0.8) rotate(-3deg);
+  transition: all 0.35s;
+}
+.item:nth-of-type(4n+3) .polaroid:before {
+  transform: rotate(-4deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  left: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.3);
+}
+.item:hover {
+  filter: none;
+  transform: scale(1, 1) rotate(0deg) !important;
+  transition: all 0.35s;
+}
+.item:hover .polaroid:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  transform: rotate(0deg);
+  height: 90%;
+  width: 90%;
+  bottom: 0%;
+  right: 5%;
+  box-shadow: 0 1rem 3rem rgba(0,0,0,0.2);
+  transition: all 0.35s;
+}
