made About photos linkable and more user friendly

--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -21,26 +21,37 @@
 
 <div class="wrapper">
 
-        <div class="item">
-          <div class="polaroid"><img src="/static/images/dawn.jpg">
-            <div class="caption"><a href="https://www.healthline.com/health/depression/benefits-sunlight">Serotonin</a>
+        <a href="https://www.healthline.com/health/depression/benefits-sunlight">
+          <div class="item">
+            <div class="polaroid">
+                <img src="/static/images/dawn.jpg"/>
+                <div class="caption">
+                  Serotonin
+                </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="https://www.health.harvard.edu/staying-healthy/vitamin-d-and-your-health-breaking-old-rules-raising-new-hopes">
+          <div class="item">
+            <div class="polaroid">
+              <img src="/static/images/desert.jpg"/>
+                <div class="caption">
+                  Vitamin D
               </div>
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="polaroid"><img src="/static/images/desert.jpg">
-            <div class="caption"><a href="https://www.health.harvard.edu/staying-healthy/vitamin-d-and-your-health-breaking-old-rules-raising-new-hopes">Vitamin D</a>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="item">
-          <div class="polaroid"><img src="/static/images/nature.jpg">
-            <div class="caption"><a href="https://mrc.ukri.org/news/browse/scientists-uncover-how-sunlight-on-skin-reduces-eczema-inflammation/">Immunity</a>
+        <a href="https://mrc.ukri.org/news/browse/scientists-uncover-how-sunlight-on-skin-reduces-eczema-inflammation/">
+          <div class="item">
+            <div class="polaroid"><img src="/static/images/nature.jpg"/>
+              <div class="caption">
+                Immunity
+              </div>
             </div>
           </div>
-        </div>
+        </a>
 
 </div>
 
