--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -42,7 +42,9 @@
   opacity: 0.6;
 }
 
+p.about {
 
+}
 
 
 /* CSS FOR SUBMISSION FORM */
@@ -251,7 +253,7 @@ textarea:hover {
   line-height: 2em;
 }
 .item {
-  width: 30%;
+  width: 70%;
   display: inline-block;
   margin-top: 2rem;
   filter: grayscale(100%);
