--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -14,47 +14,73 @@
 
 <header>ABOUT PHOSPHORUS</header>
 
-<p id="form">Phosphorus is an app for sun-based mindfulness.
-  Get a reminder 30 minutes before sunrise and sunset to have a chance to get outside and enjoy the sun.
-  <p id="form">Watching a sunrise/sunset has noted mental benefits, and is a great way to start or end your day. </p>
-  <p id="form"><strong>Phosphorus</strong> uses HereMaps and Airvisual APIs to generate local geodata from user input. </p>
+<div class="row">
+  
+  <div class="col-md-6">
+    <p id="about">Phosphorus is an app for sun-based mindfulness. Get a reminder 30 minutes before sunrise and sunset to have a chance to get outside and enjoy the sun.</p>
+  </div>
 
-<div class="wrapper">
-
-        <a href="https://www.healthline.com/health/depression/benefits-sunlight">
-          <div class="item">
-            <div class="polaroid">
-                <img src="/static/images/dawn.jpg"/>
-                <div class="caption">
-                  Serotonin
-                </div>
-            </div>
-          </div>
-        </a>
-
-        <a href="https://www.health.harvard.edu/staying-healthy/vitamin-d-and-your-health-breaking-old-rules-raising-new-hopes">
-          <div class="item">
-            <div class="polaroid">
-              <img src="/static/images/desert.jpg"/>
-                <div class="caption">
-                  Vitamin D
-              </div>
-            </div>
-          </div>
-        </a>
-
-        <a href="https://mrc.ukri.org/news/browse/scientists-uncover-how-sunlight-on-skin-reduces-eczema-inflammation/">
-          <div class="item">
-            <div class="polaroid"><img src="/static/images/nature.jpg"/>
+  <div class="col-md-6">
+    <div class="wrapper">
+      <a href="https://www.healthline.com/health/depression/benefits-sunlight">
+        <div class="item">
+          <div class="polaroid">
+              <img src="/static/images/dawn.jpg"/>
               <div class="caption">
-                Immunity
+                Serotonin
               </div>
-            </div>
           </div>
-        </a>
+        </div>
+      </a>
+    </div>
+  </div>
 
 </div>
 
+<div class="row">
+  
+  <div class="col-md-6">
+    <div class="wrapper">
+      <a href="https://www.health.harvard.edu/staying-healthy/vitamin-d-and-your-health-breaking-old-rules-raising-new-hopes">
+        <div class="item">
+          <div class="polaroid">
+            <img src="/static/images/desert.jpg"/>
+              <div class="caption">
+                Vitamin D
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <p id="about">Watching a sunrise/sunset has noted mental benefits, and is a great way to start or end your day. </p>
+  </div>
+
+</div>
+
+<div class="row">
+  
+  <div class="col-md-6">
+    <p id="about"><strong>Phosphorus</strong> uses HereMaps and Airvisual APIs to generate local geodata from user input. </p>
+  </div>
+
+  <div class="col-md-6">
+    <div class="wrapper">
+      <a href="https://mrc.ukri.org/news/browse/scientists-uncover-how-sunlight-on-skin-reduces-eczema-inflammation/">
+        <div class="item">
+          <div class="polaroid"><img src="/static/images/nature.jpg"/>
+            <div class="caption">
+              Immunity
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+</div>
 
 
 {% endblock content %}
